--- a/stylesheet1.css
+++ b/stylesheet1.css
@@ -1,56 +1,50 @@
 ﻿
-    margin:5px;
-    padding:5px;
-    box-sizing:border-box;
 body {
-    font-family: Arial: black;
-    display: flex;
+    font-family: Arial;
 }
 .full {
-    width: 50%;
-    max-width: 1000px;
-    min-height: 1000px;
-    background-color: white;
-    margin: 0px;
-    display: grid;
-    grid-template-columns: 2fr 4fr;
-    justify-content: center;
-    text-align: center;
-
+    width: 10px;
+    max-width: 10px;
+    min-height: 10px;
+    background-color: black;
+    margin:0px;
+    display: inline-grid;
+    grid-template-columns: auto 1000px;
+    grid-column-gap: 10px;
+    grid-row-gap: 20px;
 }
 .left {
     position: initial;
     background-color: grey;
-    padding: 20px;
-
-}
-.Name_Full {
-    position: initial;
-    background-color: white;
-    padding: 20px;
-    text-align: center;
-    background-color: grey;
+    padding: 10px;
+    text-align: left;
+    justify-content: normal;
+    border: 60px;
+    font-size:1vw;
 }
 .right {
     position: initial;
     background-color: white;
-    padding: 20px;
+    padding: 25px;
+    justify-content: normal;
     text-align: center;
+    border: 60px;
+    font-size:1vw;
 }
 {
-    .Image, .Contact, .Skills, .Language, .Awards & Other Certificates, .Title, .Summary, .Experience, .Education, .Porject{margin-bottom: 30px;} 
+    .Image, .Contact, .Tech Stack, .Language, .Awards & Other Certificates, .Title, .Summary, .Experience, .Education, .Porject{margin-bottom: 30px;} 
 }
 .h2 {
     background-color:grey;
 }
-table, th, td {
-    border: 2.5px solid black;
+.center, th, td{
+    border: 3px solid black;
     border-collapse: collapse;
-    margin: 4px;
+    margin-left: auto;
+    margin-right: auto;
 }
 .Download_Button {
     margin: 12px;
+    color: grey;
 }
-.Wrapper {
-    
-}
+
